# AppsQt5Utilitarios

./: .gitignore  README.md
hardware_monitor/: CMakeLists.txt  README.md
hardware_monitor/src/: mainwindow.cpp  mainwindow.h  systeminfo.cpp  systeminfo.h
manager_remote/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  SshConnection.cpp  SshConnection.h  main.cpp
ssh_terminal_app/: CMakeLists.txt  MakeFile  main.cpp  sshterminal.cpp  sshterminal.desktop.in  sshterminal.h
